test/1.4/errors/T_EBITRR.dml
/*
  © 2022-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;
device test;

import "utility.dml";

bank b {
    register r1 size 4 is unmapped {
        /// ERROR EBITRR
        field f1 @ [3:-1];
    }

    register r2 size 4 is unmapped {
        /// ERROR EBITRR
        field f1 @ [32:16];
    }
}
